--- a/notebooks/3_embeddings.ipynb
+++ b/notebooks/3_embeddings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -15,6 +15,7 @@
     "import pandas as pd\n",
     "\n",
     "from collections import Counter\n",
+    "from gensim.models import KeyedVectors\n",
     "\n",
     "from sklearn.metrics import f1_score, make_scorer, confusion_matrix, \\\n",
     "    classification_report\n",
@@ -36,93 +37,288 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 73,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "with open(\"../Data/Learn/sentences.pkl\", \"rb\") as f:\n",
-    "    learn_sentences = pickle.load(f)\n",
+    "with open(\"../Data/Learn/sequences.pkl\", \"rb\") as f:\n",
+    "    learn_sequences = pickle.load(f)\n",
     "    \n",
-    "with open(\"../Data/Test//sentences.pkl\", \"rb\") as f:\n",
-    "    test_sentences = pickle.load(f)"
+    "with open(\"../Data/Test/sequences.pkl\", \"rb\") as f:\n",
+    "    test_sequences = pickle.load(f)\n",
+    "    \n",
+    "with open(\"../Data/dict.pkl\", \"rb\") as f:\n",
+    "    vocabulary = pickle.load(f)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Load embeddings"
+    "# Embeddings"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'1152449'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "words = []\n",
-    "with(open(\"../Data/wiki.fr.vec\")) as f:\n",
-    "    for line in f:\n",
-    "        words.append(line.split()[0])\n",
-    "words.pop(0)\n",
-    "words_set = set(words)"
+    "### Load fasttext embeddings"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 38,
    "metadata": {
-    "collapsed": true,
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "embeddings = np.zeros((len(my_vocab), 301), dtype=np.float64)\n",
-    "found_words = set()\n",
-    "with(open(\"../Data/wiki.fr.vec\")) as f:\n",
-    "    embeddings[0, -1] = 1\n",
-    "    for line in f:\n",
-    "        elements = line.split()\n",
-    "        index = my_vocab.get(elements[0], None)\n",
-    "        if index is None:\n",
-    "            continue\n",
-    "        found_words.add(elements[0])\n",
-    "        embeddings[index, :300] = np.fromiter((float(x) for x in elements[-300:]), np.float64, 300)"
+    "embeddings_dict = KeyedVectors.load_word2vec_format(\"../Data/wiki.fr.vec\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Handle unknown words"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "28934 known words out of 30432\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_vocab_mapping, new_reverse_vocabulary = {}, {}\n",
+    "\n",
+    "# Known words\n",
+    "i = -1\n",
+    "for word in vocabulary:\n",
+    "    if word in embeddings_dict:\n",
+    "        i += 1\n",
+    "        new_vocab_mapping[vocabulary[word]] = i\n",
+    "        new_reverse_vocabulary[i] = word\n",
+    "print(\"%d known words out of %d\" % (i + 1, len(vocabulary)))\n",
+    "\n",
+    "# Unknown words\n",
+    "i += 1\n",
+    "for word in vocabulary:\n",
+    "    if word not in embeddings_dict:\n",
+    "        new_vocab_mapping[vocabulary[word]] = i\n",
+    "new_reverse_vocabulary[i] = \"<UNK>\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30432 original words\n",
+      "28935 new words (1 unknown)\n",
+      "28934 max new words index\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"%d original words\" % len(new_vocab_mapping))\n",
+    "print(\"%d new words (1 unknown)\" % len(np.unique(list(new_vocab_mapping.values()))))\n",
+    "print(\"%d max new words index\" % max(new_vocab_mapping.values()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "'<UNK>'"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(found_words) == len(my_vocab) - 1"
+    "num_new_words = 28935\n",
+    "new_reverse_vocabulary[num_new_words - 1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Apply new mappings to sequences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "new_learn_sequences = [list(map(new_vocab_mapping.get, seq)) for seq in learn_sequences]\n",
+    "new_test_sequences = [list(map(new_vocab_mapping.get, seq)) for seq in test_sequences]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create corresponding embeddings array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "embeddings = np.zeros((num_new_words, 300))\n",
+    "# Last row is for unknown words, we leave it to zero for the moment\n",
+    "for i in range(num_new_words - 1):\n",
+    "    embeddings[i, :] = embeddings_dict[new_reverse_vocabulary[i]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Verification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(\"J'aurai l'occasion de dire aux Français comment notre enseignement devra évoluer pour permettre à chaque jeune de trouver sa place, d'entrer dans le monde du travail, de savoir s'adapter et, à partir de là, d'acquérir, tout au long de la vie, de nouvelles compétences et de nouveaux savoirs.\",\n",
+       " [28934, 2147, 28934, 309, 1],\n",
+       " True)"
+      ]
+     },
+     "execution_count": 164,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(learn_sentences[0], new_learn_sequences[0][:5], \n",
+    "(embeddings[2147] == embeddings_dict.word_vec(\"aurai\")).all())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Et tous se demandaient : \" Après elle, après nous, qui se souviendra et comment ?',\n",
+       " [4, 48, 36, 11372, 28934],\n",
+       " True)"
+      ]
+     },
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(test_sentences[0], new_test_sequences[0][:5], \n",
+    "(embeddings[48] == embeddings_dict.word_vec(\"tous\")).all())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
+      ]
+     },
+     "execution_count": 167,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Last row for unknown words\n",
+    "embeddings[num_new_words - 1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Save new data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "with open(\"../Data/generated/my_learn_sequences.pkl\", \"wb\") as f:\n",
+    "    pickle.dump(new_learn_sequences, f)\n",
+    "    \n",
+    "with open(\"../Data/generated/my_test_sequences.pkl\", \"wb\") as f:\n",
+    "    pickle.dump(new_test_sequences, f)\n",
+    "    \n",
+    "with open(\"../Data/generated/my_reverse_vocabulary.pkl\", \"wb\") as f:\n",
+    "    pickle.dump(new_reverse_vocabulary, f)\n",
+    "    \n",
+    "with open(\"../Data/generated/my_embeddings.pkl\", \"wb\") as f:\n",
+    "    pickle.dump(embeddings, f)"
    ]
   },
   {
